syntax = "proto3";

message StoreDataRequest {
    string data = 1;
}

message StoreDataResponse {
    string s3uri = 1;
}

service StoreDataService {
    rpc StoreData (StoreDataRequest) returns (StoreDataResponse) {}
}

message AppendDataRequest {
    string data = 1;
}

message AppendDataResponse {
    string s3uri = 1;
}

service AppendDataService {
    rpc AppendData (AppendDataRequest) returns (AppendDataResponse) {}
}

message DeleteDataRequest {
    string s3uri = 1;
}

message DeleteDataResponse {
    string message = 1;
}

service DeleteDataService {
    rpc DeleteFile (DeleteDataRequest) returns (DeleteDataResponse) {}
}